force-app/main/default/objects/Case_Transfer_Summary__c/Case_Transfer_Summary__c.object-meta.xml
<CustomObject>
    <label>Case Transfer Summary</label>
    <pluralLabel>Case Transfer Summaries</pluralLabel>
    <nameField>
        <label>Summary ID</label>
        <type>AutoNumber</type>
        <displayFormat>CTS-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Stores an automated summary generated during a case transfer or owner change event.</description>
</CustomObject>