force-app/main/default/objects/Case_Transfer_Summary__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>MasterDetail</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Transfer Summaries</relationshipLabel>
    <relationshipName>Transfer_Summaries</relationshipName>
    <required>true</required>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
    <description>The Case record to which this summary belongs. This relationship is mandatory.</description>
</CustomField>