force-app/main/default/objects/Case_Transfer_Summary__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <label>Generated At</label>
    <type>DateTime</type>
</CustomField>