force-app/main/default/objects/Case_Transfer_Summary__c/fields/Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>Generation_Status__c</fullName>
    <label>Generation Status</label>
    <description>Indicates whether the LLM summary was generated successfully. Success = summary is usable. Failed = Summary_Text__c contains the error message. Pending is reserved for future async status tracking.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>