force-app/main/default/objects/Case_Transfer_Summary__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <label>Model Name</label>
    <description>The name of the LLM model used to generate this summary (e.g., gpt-4). Stored for auditability and model performance tracking.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>