force-app/main/default/objects/Case_Transfer_Summary__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <label>Model Version</label>
    <description>The version identifier of the LLM model used for generation. Stored alongside Model_Name__c for full model traceability.</description>
    <type>Text</type>
    <length>50</length>
</CustomField>