force-app/main/default/objects/Case_Transfer_Summary__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <required>true</required>
    <description>The generated summary content detailing the case transfer context. This field is mandatory.</description>
</CustomField>