force-app/main/default/objects/Case_Transfer_Summary__c/fields/Summary_Text__c.field-meta.xml
<CustomField>
    <fullName>Summary_Text__c</fullName>
    <label>Summary Text</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>