force-app/main/default/objects/Case_Transfer_Summary__c/fields/Transfer_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Timestamp__c</fullName>
    <label>Transfer Timestamp</label>
    <description>The exact date/time when the case ownership change occurred. Used as the cutoff for data aggregation — only interactions before this timestamp are included in the summary.</description>
    <type>DateTime</type>
</CustomField>